Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjTextObj.quorum
class Main
    action Main
        Text t
        Text txt
        t:SetValue("text")
        txt = cast(Text, t)
        if txt:GetValue() = "text"
            output "passed"
        end
    end
end