Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjTextObj.quorum
class main
    action Main
        Text t
        Integer int
        t:SetValue("text")
        int = cast(Integer, g)
    end
end